# investment-sheet-manager

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  LOCAL_TESTING_PLAN.md  pyproject.toml  requirements.txt
.claude/commands/: update-claude-md.md
notebook/: portfolio_update.ipynb
portfolio/: config.py  models.py  runner.py
portfolio/drive/: archiver.py
portfolio/engine/: __init__.py  cash.py  fifo.py  holdings.py
portfolio/market/: __init__.py  symbol_overrides.py  yfinance_client.py
portfolio/metrics/: __init__.py  composition.py  fundamentals.py  opportunity.py  performance.py  pricing.py
portfolio/parsers/: __init__.py  activity_parser.py  holdings_parser.py  unrealized_parser.py  utils.py
portfolio/sheets/: __init__.py  writer.py
tests/: test_activity_parser.py  test_cash.py  test_composition.py  test_detect_csv_type.py  test_fifo.py  test_fundamentals.py  test_holdings.py  test_holdings_parser.py  test_opportunity.py  test_performance.py  test_pricing.py  test_symbol_overrides.py  test_unrealized_parser.py  test_writer.py  test_yfinance_client.py
tests/sample_data/: activity_sample.csv  holdings_sample.csv  unrealized_sample.csv
