[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-sheet-manager"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "gspread>=5.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.1",
    "google-api-python-client>=2.0",
    "yfinance>=0.2",
]

[tool.setuptools.packages.find]
include = ["portfolio*"]
